--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,13 @@ script:
     - dotnet restore
     - dotnet build --configuration Release
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-    - docker build -t padmakumarnkg/inventorymanagement .
+    - docker build -t padmakumarnkg/inventorymanagement:latest -t padmakumarnkg/inventorymanagement:$SHA .
     - docker push padmakumarnkg/inventorymanagement:latest
     - docker push padmakumarnkg/inventorymanagement:$SHA
+    - curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl
+    - chmod +x ./kubectl
+    - sudo mv ./kubectl /usr/local/bin/kubectl
+    - curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+    - az login --service-principal --username "$APP_ID" --password "$AK_SECRET" --tenant "$TENANT_ID"
+    - az aks get-credentials --resource-group padma-kubernetes --name padma-aks-cluster-1
+    - kubectl get nodes
