--- a/k8s/nginx-ingress.yml
+++ b/k8s/nginx-ingress.yml
@@ -2,15 +2,18 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: inventory-management-ingress 
+  namespace: default
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
-  - http:
+  - host: padma-inventory-management
+    http:
       paths:     
       - backend:
           serviceName: server-cluster-ip-service
           servicePort: 5000
         path: /inventory(/|$)(.*)
+        
