--- a/k8s/nginx-ingress.yml
+++ b/k8s/nginx-ingress.yml
@@ -5,11 +5,13 @@ metadata:
   namespace: default
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:  
     - http:
-      paths:     
-      - backend:
-          serviceName: server-cluster-ip-service
-          servicePort: 5000
-        path: /inventory(/|$)(.*)
+        paths:     
+        - backend:
+            serviceName: server-cluster-ip-service
+            servicePort: 5000
+          path: /inventory(/|$)(.*)
