base path in code

--- a/k8s/nginx-ingress.yml
+++ b/k8s/nginx-ingress.yml
@@ -15,3 +15,11 @@ spec:
             serviceName: server-cluster-ip-service
             servicePort: 5000
           path: /inventory(/|$)(.*)
+        - backend:
+            serviceName: server-cluster-ip-service
+            servicePort: 5000
+          path: /Products(/|$)(.*)
+        - backend:
+            serviceName: server-cluster-ip-service
+            servicePort: 5000
+          path: /Home(/|$)(.*)
