--- a/k8s/nginx-ingress.yml
+++ b/k8s/nginx-ingress.yml
@@ -5,8 +5,7 @@ metadata:
   namespace: default
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"    
 spec:
   rules:  
     - http:
@@ -14,5 +13,5 @@ spec:
         - backend:
             serviceName: server-cluster-ip-service
             servicePort: 5000
-          path: /inventory(/|$)(.*)
+          path: /inventory
      
